@@ -1,10 +1,8 @@
 package com.vubq.fashionstorewebsite.controllers;
 
 import com.vubq.fashionstorewebsite.dtos.*;
-import com.vubq.fashionstorewebsite.entities.Category;
-import com.vubq.fashionstorewebsite.entities.Product;
+import com.vubq.fashionstorewebsite.entities.ProductDetail;
 import com.vubq.fashionstorewebsite.entities.User;
-import com.vubq.fashionstorewebsite.enums.EStatus;
 import com.vubq.fashionstorewebsite.payloads.DataTableRequest;
 import com.vubq.fashionstorewebsite.payloads.DataTableResponse;
 import com.vubq.fashionstorewebsite.services.ProductDetailService;
@@ -38,30 +36,27 @@ public class ProductController {
 
     @PostMapping("/get-all")
     public DataTableResponse getAll(DataTableRequest request, @RequestBody ProductFilterDto productFilterDto) {
-        Page<Product> result = this.productService.getAll(request, productFilterDto);
+        Page<ProductDetail> productDetailResults = this.productDetailService.getAll(request, productFilterDto);
         List<ProductDto> productDtoList = new ArrayList<>();
-        productDtoList = result.get().toList().stream().map(product -> {
-            ProductDto productDto = ProductDto.toDto(product);
+        productDtoList = productDetailResults.get().toList().stream().map(productDetail -> {
+            ProductDto productDto = ProductDto.toDto(productDetail.getProduct());
 
-            User user = this.userService.findById(product.getCreatedBy()).orElse(null);
+            User user = this.userService.findById(productDetail.getProduct().getCreatedBy()).orElse(null);
             CreatedByDto createdByDto = CreatedByDto.builder()
                     .id(user != null ? user.getId() : null)
                     .name(user != null ? user.getFirstName() + " " + user.getLastName() : null)
                     .build();
             productDto.setCreatedBy(createdByDto);
 
-            List<SizeDto> sizeDtoList = this.productDetailService.getListDistinctSizeByProductId(product.getId())
-                    .stream().map(sizeId -> {
-                        SizeDto sizeDto = SizeDto.toDto(this.sizeService.findById(sizeId).get());
-                        return sizeDto;
-                    }).toList();
-            productDto.setSizes(sizeDtoList);
+            productDto.setSizes(this.productDetailService.findAllSizeByProductId(productDetail.getProduct().getId()).stream().map(SizeDto::toDto).collect(Collectors.toList()));
+            productDto.setColors(this.productDetailService.findAllColorByProductId(productDetail.getProduct().getId()).stream().map(ColorDto::toDto).collect(Collectors.toList()));
+            productDto.setMaterials(this.productDetailService.findAllMaterialByProductId(productDetail.getProduct().getId()).stream().map(MaterialDto::toDto).collect(Collectors.toList()));
 
             return productDto;
-        }).collect(Collectors.toList());
+        }).toList();
         return DataTableResponse.build()
                 .ok()
-                .totalRows(result.getTotalElements())
+                .totalRows(productDetailResults.getTotalElements())
                 .items(productDtoList);
     }
 }
